--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="row">
           <button class="num" id="0">0</button>
-
+          <button class="dec" id=".">.</button>
           <button class="oper" id="=">=</button>
         </div>
       </div>
